--- a/hw10/quotes/templates/quotes/base.html
+++ b/hw10/quotes/templates/quotes/base.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon"> {% endcomment %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Document</title>
+    {% load static %}
+    <link rel="stylesheet" href={% static 'quotes/style.css'%}
+    {% comment %} <title>Homework_10_Django</title> {% endcomment %}
   </head>
   <body>
     <div class="container">
-        <div class="row header-box">
+        <div class="row header-box pt-3">
             <div class="col-md-8">
                 <h1>
                     <a href="/" style="text-decoration: none">Quotes to Scrape</a>
@@ -20,9 +22,9 @@
             </div>
             <div class="col-md-4">
                 <p>
-                    <a href="/login">SingUp</a>
-                    <a href="/login">Login</a>
-                    <a href="/login">Logout</a>
+                    <a href="/login" class="btn btn-primary">SingUp</a>
+                    <a href="/login" class="btn btn-primary">Login</a>
+                    <a href="/login" class="btn btn-primary">Logout</a>
                 </p>
             </div>
         </div>
@@ -33,12 +35,7 @@
     </div>
     <footer class="footer">
         <div class="container">
-            <p class="text-muted">
-                Quotes by: <a href="https://www.goodreads.com/quotes">GoodReads.com</a>
-            </p>
-            <p class="copyright">
-                Made with <span class="zyte">❤</span> by <a class="zyte" href="https://www.zyte.com">Zyte</a>
-            </p>
+            
         </div>
     </footer>
 
