--- a/hw10/quotes/static/quotes/style.css
+++ b/hw10/quotes/static/quotes/style.css
@@ -1,3 +1,9 @@
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 .quote {
     padding: 10px;
     margin-bottom: 30px;
@@ -34,3 +40,43 @@ a {
     color: #4582ec;
     text-decoration: none;
 }
+
+ul.pager {
+    margin-bottom: 100px;
+}
+
+.pager {
+    font-family: "Raleway","Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+.pager {
+    padding-left: 0;
+    margin: 22px 0;
+    list-style: none;
+    text-align: center;
+}
+
+.pager li {
+    display: inline;
+}
+
+.pager .previous>a, .pager .previous>span {
+    float: left;
+}
+
+.pager li>a, .pager li>span {
+    display: inline-block;
+    padding: 5px 14px;
+    background-color: #ffffff;
+    border: 1px solid #dddddd;
+    border-radius: 15px;
+}
+
+.pager a {
+    color: #333333;
+}
+
+.pager .next>a, .pager .next>span {
+    float: right;
+}
+
