--- a/hw10/quotes/templates/quotes/index.html
+++ b/hw10/quotes/templates/quotes/index.html
@@ -4,23 +4,63 @@
 
 <div class="row">
     <div class="col-md-8">
+
+        {% for quote in quotes%}
+
         <div class="quote" itemscope="" itemtype="http://schema.org/CreativeWork">
-            <span class="text" itemprop="text">“The world as we have created it is a process of our thinking. It cannot be changed without changing our thinking.”</span>
-            <span>by <small class="author" itemprop="author">Albert Einstein</small> <a href="/author/Albert-Einstein">(about)</a></span>
+            <span class="text" itemprop="text">
+                {{ quote.quote }}
+            </span>
+            <span>by <small class="author" itemprop="author">
+                {{ quote.author.fullname }}
+            </small> <a href="/author/{{ quote.author.fullname }}">(about)</a></span>
             <div class="tags">
                 Tags:
-                <meta class="keywords" itemprop="keywords" content="change,deep-thoughts,thinking,world"> 
-                <a class="tag" href="/tag/change/page/1/">change</a>
-                <a class="tag" href="/tag/deep-thoughts/page/1/">deep-thoughts</a>
-                <a class="tag" href="/tag/thinking/page/1/">thinking</a>
-                <a class="tag" href="/tag/world/page/1/">world</a>
+                {% for tag in quote.tags %}
+                    <a class="tag" href="/tag/{{tag}}">{{tag}}</a>
+                {% endfor %}
             </div>
         </div>
+
+        {% endfor %}
+
+        {% comment %} <nav>
+            <ul class="pager">
+                
+                <li class="previous">
+                    <a class="{% if not quotes.has_previous %} disabled {% endif %}" 
+                       href="{% if quotes.has_previous %} {% url 'quotes:root_paginate' quotes.previous_page_number %} {% else %} # {% endif %}">
+                        <span aria-hidden="true">←</span>Previous
+                    </a>
+                </li>
+                
+                <li class="next">
+                    <a class="{% if not quotes.has_next %} disabled {% endif %}" 
+                       href="{% if quotes.has_next %} {% url 'quotes:root_paginate' quotes.next_page_number %} {% else %} # {% endif %}">
+                        <span aria-hidden="true">→</span>Next
+                    </a>
+                </li>
+                
+            </ul>
+        </nav> {% endcomment %}
         <nav>
             <ul class="pager">
-                <li class="next">
-                    <a href="/page/2/" class="btn btn-primary">Next <span aria-hidden="true">→</span></a>
+                
+                <li class="previous">
+                    <a class="{% if not quotes.has_previous %} disabled {% endif %}" 
+                       href="{% if quotes.has_previous %} {% url 'quotes:root_paginate' quotes.previous_page_number %} {% else %} # {% endif %}">
+                        <span aria-hidden="true">←</span>Previous
+                    </a>
                 </li>
+                
+                
+                <li class="next">
+                    <a class="{% if not quotes.has_next %} disabled {% endif %}" 
+                       href="{% if quotes.has_next %} {% url 'quotes:root_paginate' quotes.next_page_number %} {% else %} # {% endif %}">
+                        <span aria-hidden="true">→</span>Next
+                    </a>
+                </li>
+                
             </ul>
         </nav>
     </div>
